# simucell3d

./: .gitignore  CMakeLists.txt  Dockerfile  License  README.md  main.cpp  parameters_benchmarck.xml  parameters_default_dynamic.xml  parameters_default_overdamped.xml  parameters_sheet.xml  parameters_tube.xml  parameters_vesicle.xml
doc/: input_mesh_format.md  mesh_generation.md  output_statistics.md  parameter_file_doc.md  parameter_screen.md  python_support.md
include/: custom_exception.hpp  custom_structures.hpp  global_configuration.hpp  solver.hpp  utils.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  input_mesh_generation.py  input_mesh_generation.py.pclprof  solver.cpp  voxelize.py
src/automatic_polarization/: CMakeLists.txt  automatic_polarization_writer.cpp  automatic_polarizer.cpp
src/contact_models/: CMakeLists.txt  contact_face_face_via_coupling.cpp  contact_model_abstract.cpp  contact_node_face_via_spring.cpp  contact_node_node_via_coupling.cpp
src/io/: CMakeLists.txt  mesh_reader.cpp  mesh_writer.cpp  parameter_reader.cpp  simulation_initializer.cpp  statistics_writer.cpp
src/math_modules/: CMakeLists.txt  mat33.cpp  vec3.cpp
src/mesh/: CMakeLists.txt  README.md  cell.cpp  edge.cpp  face.cpp  node.cpp
src/python_bindings/: CMakeLists.txt  simucell3d_wrapper.cpp
src/time_integration/: CMakeLists.txt  time_integration.cpp
src/triangulation_modules/: CMakeLists.txt  ball_pivoting_algorithm.cpp  cell_divider.cpp  initial_triangulation.cpp  local_mesh_refiner.cpp  poisson_sampling.cpp
src/uspg/: CMakeLists.txt  uspg_3d.cpp  uspg_4d.cpp  uspg_abstract.cpp
test/: CMakeLists.txt
test/test_automatic_polarization/: CMakeLists.txt  lumen_geometry.vtk  test_automatic_polarization.cpp  test_geometry.vtk
test/test_contact_models/: CMakeLists.txt
test/test_contact_models/test_contact_model_abstract/: CMakeLists.txt  test_contact_model_abstract.cpp  test_contact_model_abstract.hpp
test/test_contact_models/test_contact_node_face_via_springs/: CMakeLists.txt
test/test_contact_models/test_contact_node_face_via_springs/test_cell_in_ecm_contact_via_springs/: CMakeLists.txt  test_cell_in_ecm_contact_via_springs.cpp  test_cell_in_ecm_contact_via_springs.hpp
test/test_contact_models/test_contact_node_face_via_springs/test_nucleus_in_cell_contact_via_springs/: CMakeLists.txt  test_nucleus_in_cell_contact_via_springs.cpp  test_nucleus_in_cell_contact_via_springs.hpp
test/test_contact_models/test_contact_node_node_via_coupling/: CMakeLists.txt  README.md  requirements.txt
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_doublet_angle/: angle_measurement_script.py  test_cell_doublet_angle.py
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_doublet_angle_with_varying_lat_tension/: angle_measurement_script.py  test_cell_doublet_angle_with_varying_lat_tension.py
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_in_ecm_contact_via_coupling/: CMakeLists.txt  cell_in_ecm_geometry.vtk  test_cell_in_ecm_contact_via_coupling.cpp  test_cell_in_ecm_contact_via_coupling.hpp
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_internalization/: analytic_solution.py  internalization_test_analysis_script.py  simulation_analysis.py  test_cell_internalization.py  test_geom_2_cell_data.vtk  test_geom_2_face_data.vtk
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_separation/: CMakeLists.txt  cell_doublet.vtk  test_cell_separation.cpp  test_cell_separation.hpp
test/test_contact_models/test_contact_node_node_via_coupling/test_cell_triplet_angle/: cell_triplet_file_collector.py  test_cell_triplet_angle.py  test_cell_triplet_angle_result_analysis.py
test/test_contact_models/test_contact_node_node_via_coupling/test_nucleus_in_cell_contact_via_coupling/: CMakeLists.txt  nucleus_in_cell_geometry.vtk  test_nucleus_in_cell_contact_via_coupling.cpp  test_nucleus_in_cell_contact_via_coupling.hpp
test/test_io/: CMakeLists.txt
test/test_io/test_mesh_reader/: CMakeLists.txt  test_mesh_reader.cpp
test/test_io/test_mesh_reader/test_meshes/: hexagonal_cell_layer.vtk  invalid_cell_data_1.vtk  invalid_cell_data_2.vtk  invalid_cell_type_1.vtk  invalid_mesh_file.vtk  invalid_nb_nodes.vtk  invalid_node_format.vtk  valid_mesh_file.vtk
test/test_io/test_mesh_writer/: CMakeLists.txt  correct_cube.vtk  test_3.vtk  test_4.vtk  test_mesh_writer.cpp
test/test_io/test_parameter_reader/: CMakeLists.txt  test_file.xml  test_parameter_reader.cpp  test_parameter_reader.hpp
test/test_io/test_simulation_initializer/: 2_spheres.vtk  CMakeLists.txt  test_parameter_file.xml  test_simulation_initializer.cpp
test/test_math_modules/: CMakeLists.txt
test/test_math_modules/test_mat33/: CMakeLists.txt  mat33_test.cpp
test/test_math_modules/test_vec3/: CMakeLists.txt  vec3_test.cpp
test/test_mesh/: CMakeLists.txt
test/test_mesh/test_cell/: CMakeLists.txt  cell_tester.hpp  test_cell.cpp
test/test_mesh/test_edge/: CMakeLists.txt  test_edge.cpp
test/test_mesh/test_face/: CMakeLists.txt  face_tester.hpp  test_face.cpp
test/test_mesh/test_node/: CMakeLists.txt  node_tester.hpp  test_node.cpp
test/test_triangulation_modules/: CMakeLists.txt
test/test_triangulation_modules/test_bpa/: CMakeLists.txt  test_bpa.cpp  test_bpa.hpp  test_fil_holes.vtk
test/test_triangulation_modules/test_cell_divider/: CMakeLists.txt  test_cell.vtk  test_cell_divider.cpp
test/test_triangulation_modules/test_initial_triangulation/: CMakeLists.txt  test_initial_triangulation.cpp
test/test_triangulation_modules/test_local_mesh_refiner/: CMakeLists.txt  local_mesh_refiner_tester.hpp  test_1.vtk  test_5.vtk  test_6.vtk  test_local_mesh_refiner.cpp
test/test_triangulation_modules/test_poisson_sampling/: CMakeLists.txt  test_poisson_sampling.cpp
test/test_uspg/: CMakeLists.txt
test/test_uspg/test_uspg_3d/: CMakeLists.txt  test_uspg_3d.cpp  test_uspg_3d.hpp
test/test_uspg/test_uspg_4d/: CMakeLists.txt  test_uspg_4d.cpp  test_uspg_4d.hpp
test/test_utils/: CMakeLists.txt  test_utils.cpp
(+96 files in other folders)
