cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 17)


add_subdirectory(test_utils)
add_subdirectory(test_uspg)
add_subdirectory(test_math_modules)
add_subdirectory(test_mesh)
add_subdirectory(test_io)
add_subdirectory(test_triangulation_modules)
add_subdirectory(test_contact_models)
add_subdirectory(test_automatic_polarization)



